026-using-kubernetes/ep026.12.02-secrets/k8s/my-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-db
spec:
  selector:
    matchLabels:
      app: my-db
  template:
    metadata:
      labels:
        app: my-db
    spec:
      containers:
        - name: my-db
          image: postgres
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
